tests/snapshots/snapshots__budget_input_otp_packages_input_otp_src_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (3999 tokens)

input.tsx
     3→import * as React from 'react'
     5→import { syncTimeouts } from './sync-timeouts'
     6→import { OTPInputProps, RenderProps } from './types'
     7→import { usePrevious } from './use-previous'
     8→import { usePasswordManagerBadge } from './use-pwm-badge'
    10→export const OTPInputContext = React.createContext<RenderProps>(
    11→  {} as RenderProps,
    12→)
    14→export const OTPInput = React.forwardRef<HTMLInputElement, OTPInputProps>(
    15→  (
    16→    {
    17→      value: uncheckedValue,
    18→      onChange: uncheckedOnChange,
    19→      maxLength,
    20→      textAlign = 'left',
    21→      pattern,
    22→      placeholder,
    23→      inputMode = 'numeric',
    24→      onComplete,
    25→      pushPasswordManagerStrategy = 'increase-width',
    26→      pasteTransformer,
    27→      containerClassName,
    28→      noScriptCSSFallback = NOSCRIPT_CSS_FALLBACK,
    29→
    30→      render,
    31→      children,
    32→
    33→      ...props
    34→    },
    35→    ref,
    36→  ) => {
    37→    // Only used when `value` state is not provided
    38→    const [internalValue, setInternalValue] = React.useState(
    39→      typeof props.defaultValue === 'string' ? props.defaultValue : '',
    40→    )
    41→
    42→    // Definitions
    43→    const value = uncheckedValue ?? internalValue
    44→    const previousValue = usePrevious(value)
    45→    const onChange = React.useCallback(
    46→      (newValue: string) => {
    47→        uncheckedOnChange?.(newValue)
    48→        setInternalValue(newValue)
    49→      },
    50→      [uncheckedOnChange],
    51→    )
    52→    const regexp = React.useMemo(
    53→      () =>
    54→        pattern
    55→          ? typeof pattern === 'string'
    56→            ? new RegExp(pattern)
    57→            : pattern
    58→          : null,
    59→      [pattern],
    60→    )
    61→
    62→    /** useRef */
    63→    const inputRef = React.useRef<HTMLInputElement>(null)
    64→    const containerRef = React.useRef<HTMLDivElement>(null)
    65→    const initialLoadRef = React.useRef({
    66→      value,
    67→      onChange,
    68→      isIOS:
    69→        typeof window !== 'undefined' &&
    70→        window?.CSS?.supports?.('-webkit-touch-callout', 'none'),
    71→    })
    72→    const inputMetadataRef = React.useRef<{
    73→      prev: [number | null, number | null, 'none' | 'forward' | 'backward']
    74→    }>({
    75→      prev: [
    76→        inputRef.current?.selectionStart,
    77→        inputRef.current?.selectionEnd,
    78→        inputRef.current?.selectionDirection,
    79→      ],
    80→    })
    81→    React.useImperativeHandle(ref, () => inputRef.current, [])
    82→    React.useEffect(() => {
    83→      const input = inputRef.current
    84→      const container = containerRef.current
    85→
    86→      if (!input || !container) {
    87→        return
    88→      }
    89→
    90→      // Sync input value
    91→      if (initialLoadRef.current.value !== input.value) {
    92→        initialLoadRef.current.onChange(input.value)
    93→      }
    94→
    95→      // Previous selection
    96→      inputMetadataRef.current.prev = [
    97→        input.selectionStart,
    98→        input.selectionEnd,
    99→        input.selectionDirection,
   100→      ]
   101→      function onDocumentSelectionChange() {
   102→        if (document.activeElement !== input) {
   103→          setMirrorSelectionStart(null)
   104→          setMirrorSelectionEnd(null)
   105→          return
   106→        }
   107→
   108→        // Aliases
   109→        const _s = input.selectionStart
   110→        const _e = input.selectionEnd
   111→        const _dir = input.selectionDirection
   112→        const _ml = input.maxLength
   113→        const _val = input.value
   114→        const _prev = inputMetadataRef.current.prev
   115→
   116→        // Algorithm
   117→        let start = -1
   118→        let end = -1
   119→        let direction: 'forward' | 'backward' | 'none' = undefined
   120→        if (_val.length !== 0 && _s !== null && _e !== null) {
   121→          const isSingleCaret = _s === _e
   122→          const isInsertMode = _s === _val.length && _val.length < _ml
   123→
   124→          if (isSingleCaret && !isInsertMode) {
   125→            const c = _s
   126→            if (c === 0) {
   127→              start = 0
   128→              end = 1
   129→              direction = 'forward'
   130→            } else if (c === _ml) {
   131→              start = c - 1
   132→              end = c
   133→              direction = 'backward'
   134→            } else if (_ml > 1 && _val.length > 1) {
   135→              let offset = 0
   136→              if (_prev[0] !== null && _prev[1] !== null) {
   137→                direction = c < _prev[1] ? 'backward' : 'forward'
   138→                const wasPreviouslyInserting =
   139→                  _prev[0] === _prev[1] && _prev[0] < _ml
   140→                if (direction === 'backward' && !wasPreviouslyInserting) {
   141→                  offset = -1
   142→                }
   143→              }
   144→
   145→              start = offset + c
   146→              end = offset + c + 1
   147→            }
   148→          }
   149→
      →…
   540→function safeInsertRule(sheet: CSSStyleSheet, rule: string) {
   541→  try {
   542→    sheet.insertRule(rule)
   543→  } catch {
   544→    console.error('input-otp could not insert CSS rule:', rule)
   545→  }
   546→}
   553→const NOSCRIPT_CSS_FALLBACK = `
   554→[data-input-otp] {
   555→  --nojs-bg: white !important;
   556→  --nojs-fg: black !important;
   557→
   558→  background-color: var(--nojs-bg) !important;
      →  …

regexp.ts
     1→export const REGEXP_ONLY_DIGITS = '^\\d+$'
     2→export const REGEXP_ONLY_CHARS = '^[a-zA-Z]+$'
     3→export const REGEXP_ONLY_DIGITS_AND_CHARS = '^[a-zA-Z0-9]+$'

sync-timeouts.ts
     1→export function syncTimeouts(cb: (...args: any[]) => unknown): number[] {
     2→  const t1 = setTimeout(cb, 0) // For faster machines
     3→  const t2 = setTimeout(cb, 1_0)
     4→  const t3 = setTimeout(cb, 5_0)
     5→  return [t1, t2, t3]
     6→}

types.ts
     1→export interface SlotProps {
     2→  isActive: boolean
     3→  char: string | null
     4→  placeholderChar: string | null
     5→  hasFakeCaret: boolean
     6→}
     7→export interface RenderProps {
     8→  slots: SlotProps[]
     9→  isFocused: boolean
    10→  isHovering: boolean
    11→}
    12→type OverrideProps<T, R> = Omit<T, keyof R> & R
    13→type OTPInputBaseProps = OverrideProps<
    14→  React.InputHTMLAttributes<HTMLInputElement>,
    15→  {
    16→    value?: string
    17→    onChange?: (newValue: string) => unknown
    18→
    19→    maxLength: number
    20→
    21→    textAlign?: 'left' | 'center' | 'right'
    22→
      →…
    32→type InputOTPRenderFn = (props: RenderProps) => React.ReactNode
    33→export type OTPInputProps = OTPInputBaseProps &
    34→  (
    35→    | {
    36→        render: InputOTPRenderFn
    37→        children?: never
    38→      }
    39→    | {
    40→        render?: never
    41→        children: React.ReactNode
    42→      }
    43→  )

use-previous.ts
     1→import * as React from 'react'
     3→export function usePrevious<T>(value: T) {
     4→  const ref = React.useRef<T>()
     5→  React.useEffect(() => {
     6→    ref.current = value
     7→  })
     8→  return ref.current
     9→}

use-pwm-badge.tsx
     1→import * as React from 'react'
     2→import { OTPInputProps } from './types'
     4→const PWM_BADGE_MARGIN_RIGHT = 18
     5→const PWM_BADGE_SPACE_WIDTH_PX = 40
     6→const PWM_BADGE_SPACE_WIDTH = `${PWM_BADGE_SPACE_WIDTH_PX}px` as const
     8→const PASSWORD_MANAGERS_SELECTORS = [
     9→  '[data-lastpass-icon-root]', // LastPass
    10→  'com-1password-button', // 1Password
    11→  '[data-dashlanecreated]', // Dashlane
    12→  '[style$="2147483647 !important;"]', // Bitwarden
    13→].join(',')
    15→export function usePasswordManagerBadge({
    16→  containerRef,
    17→  inputRef,
    18→  pushPasswordManagerStrategy,
    19→  isFocused,
    20→}: {
    21→  containerRef: React.RefObject<HTMLDivElement>
    22→  inputRef: React.RefObject<HTMLInputElement>
    23→  pushPasswordManagerStrategy: OTPInputProps['pushPasswordManagerStrategy']
    24→  isFocused: boolean
    25→}) {
    26→  /** Password managers have a badge
    27→   *  and I'll use this state to push them
    28→   *  outside the input */
    29→  const [hasPWMBadge, setHasPWMBadge] = React.useState(false)
    30→  const [hasPWMBadgeSpace, setHasPWMBadgeSpace] = React.useState(false)
    31→  const [done, setDone] = React.useState(false)
    32→
    33→  const willPushPWMBadge = React.useMemo(() => {
    34→    if (pushPasswordManagerStrategy === 'none') {
    35→      return false
    36→    }
    37→
    38→    const increaseWidthCase =
    39→      (pushPasswordManagerStrategy === 'increase-width' ||
    40→        // TODO: remove 'experimental-no-flickering' support in 2.0.0
    41→        pushPasswordManagerStrategy === 'experimental-no-flickering') &&
    42→      hasPWMBadge &&
    43→      hasPWMBadgeSpace
    44→
    45→    return increaseWidthCase
    46→  }, [hasPWMBadge, hasPWMBadgeSpace, pushPasswordManagerStrategy])
    47→
    48→  const trackPWMBadge = React.useCallback(() => {
    49→    const container = containerRef.current
    50→    const input = inputRef.current
    51→    if (
    52→      !container ||
    53→      !input ||
    54→      done ||
    55→      pushPasswordManagerStrategy === 'none'
    56→    ) {
    57→      return
    58→    }
    59→
    60→    const elementToCompare = container
    61→
    62→    // Get the top right-center point of the container.
    63→    // That is usually where most password managers place their badge.
    64→    const rightCornerX =
    65→      elementToCompare.getBoundingClientRect().left +
    66→      elementToCompare.offsetWidth
    67→    const centereredY =
    68→      elementToCompare.getBoundingClientRect().top +
    69→      elementToCompare.offsetHeight / 2
    70→    const x = rightCornerX - PWM_BADGE_MARGIN_RIGHT
    71→    const y = centereredY
    72→
    73→    // Do an extra search to check for famous password managers
    74→    const pmws = document.querySelectorAll(PASSWORD_MANAGERS_SELECTORS)
    75→
    76→    // If no password manager is automatically detect,
    77→    // we'll try to dispatch document.elementFromPoint
    78→    // to identify badges
    79→    if (pmws.length === 0) {
    80→      const maybeBadgeEl = document.elementFromPoint(x, y)
    81→
    82→      // If the found element is the input itself,
    83→      // then we assume it's not a password manager badge.
    84→      // We are not sure. Most times that means there isn't a badge.
    85→      if (maybeBadgeEl === container) {
    86→        return
    87→      }
    88→    }
    89→
    90→    setHasPWMBadge(true)
    91→    setDone(true)
    92→  }, [containerRef, inputRef, done, pushPasswordManagerStrategy])
    93→
    94→  React.useEffect(() => {
    95→    const container = containerRef.current
    96→    if (!container || pushPasswordManagerStrategy === 'none') {
    97→      return
    98→    }
    99→
   100→    // Check if the PWM area is 100% visible
   101→    function checkHasSpace() {
   102→      const viewportWidth = window.innerWidth
   103→      const distanceToRightEdge =
   104→        viewportWidth - container.getBoundingClientRect().right
   105→      setHasPWMBadgeSpace(distanceToRightEdge >= PWM_BADGE_SPACE_WIDTH_PX)
   106→    }
   107→
   108→    checkHasSpace()
   109→    const interval = setInterval(checkHasSpace, 1000)
   110→
   111→    return () => {
   112→      clearInterval(interval)
   113→    }
   114→  }, [containerRef, pushPasswordManagerStrategy])
   115→
   116→  React.useEffect(() => {
   117→    const _isFocused = isFocused || document.activeElement === inputRef.current
   118→
   119→    if (pushPasswordManagerStrategy === 'none' || !_isFocused) {
   120→      return
   121→    }
   122→    const t1 = setTimeout(trackPWMBadge, 0)
   123→    const t2 = setTimeout(trackPWMBadge, 2000)
   124→    const t3 = setTimeout(trackPWMBadge, 5000)
   125→    const t4 = setTimeout(() => {
   126→      setDone(true)
   127→    }, 6000)
   128→    return () => {
   129→      clearTimeout(t1)
   130→      clearTimeout(t2)
   131→      clearTimeout(t3)
   132→      clearTimeout(t4)
   133→    }
   134→  }, [inputRef, isFocused, pushPasswordManagerStrategy, trackPWMBadge])
   135→
   136→  return { hasPWMBadge, willPushPWMBadge, PWM_BADGE_SPACE_WIDTH }
   137→}
