tests/snapshots/snapshots__budget_input_otp_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 60 → level 0 (53 words)

CHANGELOG.md
README.md
apps/storybook/README.md
apps/storybook/src/components/ui/input-otp.tsx
apps/storybook/src/lib/utils.ts
apps/storybook/src/stories/Button.stories.ts
apps/storybook/src/stories/Button.tsx
apps/storybook/src/stories/InputOTP.stories.tsx
apps/storybook/tailwind.config.js
apps/storybook/vite.config.js
apps/website/README.md
apps/website/next.config.mjs
apps/website/postcss.config.js
apps/website/src/app/(local-pages)/example-auto-submit/page.tsx
apps/website/src/app/(local-pages)/example-auto-submit/server/form-action.ts
apps/website/src/app/(local-pages)/example-playground/code.tsx
apps/website/src/app/(local-pages)/example-playground/component.tsx
apps/website/src/app/(local-pages)/example-playground/page.tsx
apps/website/src/app/(local-pages)/layout.tsx
apps/website/src/app/(local-pages)/raw-input/page.tsx
apps/website/src/app/(local-pages)/shadcn/page.tsx
apps/website/src/app/(local-pages)/shadcn/pwmb/page.tsx
apps/website/src/app/(local-pages)/shadcn/static/page.tsx
apps/website/src/app/(pages)/(home)/_components/confetti.tsx
apps/website/src/app/(pages)/(home)/_components/showcase.tsx
apps/website/src/app/(pages)/(home)/page.tsx
apps/website/src/app/(pages)/layout.tsx
apps/website/src/components/code.tsx
apps/website/src/components/copy-button.tsx
apps/website/src/components/icons.tsx
apps/website/src/components/mode-toggle.tsx
apps/website/src/components/page-header.tsx
apps/website/src/components/provider.tsx
apps/website/src/components/site-footer.tsx
apps/website/src/components/site-header.tsx
apps/website/src/components/ui/badge.tsx
apps/website/src/components/ui/button.tsx
apps/website/src/components/ui/dropdown-menu.tsx
apps/website/src/components/ui/input-otp.tsx
apps/website/src/components/ui/scroll-area.tsx
apps/website/src/components/ui/sonner.tsx
apps/website/src/config/site.ts
apps/website/src/lib/fonts.ts
apps/website/src/lib/utils.ts
apps/website/tailwind.config.ts
packages/input-otp/src/index.ts
packages/input-otp/src/input.tsx
packages/input-otp/src/regexp.ts
packages/input-otp/src/sync-timeouts.ts
packages/input-otp/src/types.ts
packages/input-otp/src/use-previous.ts
packages/input-otp/src/use-pwm-badge.tsx
packages/input-otp/tsup.config.ts
