tests/snapshots/snapshots__budget_input_otp_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 200 → level 1 (161 words)

CHANGELOG.md
     1→# Changelog
     3→## [1.4.2]
     7→## [1.4.1]
    11→## [1.4.0]
    25→## [1.2.5]
    29→## [1.2.4]
    33→## [1.2.3]
    38→## [1.2.2]
    42→## [1.2.1]
    48→## [1.2.0]
    52→## [1.2.0-beta.1]
    56→## [1.2.0-beta.0]
    61→## [1.1.0]
    87→## [1.0.1]
    92→## [1.0.0]
    96→## [0.3.31-beta]
   100→## [0.3.3-beta]
   104→## [0.3.2-beta]
   108→## [0.3.11-beta]
   112→## [0.3.1-beta]
   116→## [0.2.4]
   120→## [0.2.1]
   124→## [0.2]
README.md
     1→# The only accessible & unstyled & full featured Input OTP component in the Web.
     3→### OTP Input for React 🔐 by [@guilhermerodz](https://twitter.com/guilherme_rodz)
    20→## Usage
    39→## Default example
   136→## How it works
   141→## Features
   198→### Auto tracks if the input has space in the right side for the badge
   204→## API Reference
   206→### OTPInput
   210→#### Props
   293→## Examples
   377→## Caveats
   539→#### Sponsors
apps/storybook/README.md
apps/storybook/src/components/ui/input-otp.tsx
apps/storybook/src/lib/utils.ts
apps/storybook/src/stories/Button.stories.ts
apps/storybook/src/stories/Button.tsx
apps/storybook/src/stories/InputOTP.stories.tsx
apps/storybook/tailwind.config.js
apps/storybook/vite.config.js
apps/website/README.md
apps/website/next.config.mjs
apps/website/postcss.config.js
apps/website/src/app/(local-pages)/example-auto-submit/page.tsx
apps/website/src/app/(local-pages)/example-auto-submit/server/form-action.ts
apps/website/src/app/(local-pages)/example-playground/code.tsx
apps/website/src/app/(local-pages)/example-playground/component.tsx
apps/website/src/app/(local-pages)/example-playground/page.tsx
apps/website/src/app/(local-pages)/layout.tsx
apps/website/src/app/(local-pages)/raw-input/page.tsx
apps/website/src/app/(local-pages)/shadcn/page.tsx
apps/website/src/app/(local-pages)/shadcn/pwmb/page.tsx
apps/website/src/app/(local-pages)/shadcn/static/page.tsx
apps/website/src/app/(pages)/(home)/_components/confetti.tsx
apps/website/src/app/(pages)/(home)/_components/showcase.tsx
apps/website/src/app/(pages)/(home)/page.tsx
apps/website/src/app/(pages)/layout.tsx
apps/website/src/components/code.tsx
apps/website/src/components/copy-button.tsx
apps/website/src/components/icons.tsx
apps/website/src/components/mode-toggle.tsx
apps/website/src/components/page-header.tsx
apps/website/src/components/provider.tsx
apps/website/src/components/site-footer.tsx
apps/website/src/components/site-header.tsx
apps/website/src/components/ui/badge.tsx
apps/website/src/components/ui/button.tsx
apps/website/src/components/ui/dropdown-menu.tsx
apps/website/src/components/ui/input-otp.tsx
apps/website/src/components/ui/scroll-area.tsx
apps/website/src/components/ui/sonner.tsx
apps/website/src/config/site.ts
apps/website/src/lib/fonts.ts
apps/website/src/lib/utils.ts
apps/website/tailwind.config.ts
packages/input-otp/src/index.ts
packages/input-otp/src/input.tsx
packages/input-otp/src/regexp.ts
packages/input-otp/src/sync-timeouts.ts
packages/input-otp/src/types.ts
packages/input-otp/src/use-previous.ts
packages/input-otp/src/use-pwm-badge.tsx
packages/input-otp/tsup.config.ts
