tests/snapshots/snapshots__budget_ky_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (943 words)

readme.md
    20→## Benefits over plain `fetch`
    22→- Simpler API
      →…
    33→## Install
    35→```sh
      →…
    39→###### CDN
    41→- [jsdelivr](https://cdn.jsdelivr.net/npm/ky/+esm)
      →…
    45→## Usage
    47→```js
      →…
    85→## API
    87→### ky(input, options?)
    89→The `input` and `options` are the same as [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch), with additional `options` available (see below).
    90→
      →…
   123→### ky.post(input, options?)
   124→### ky.put(input, options?)
   125→### ky.patch(input, options?)
   126→### ky.head(input, options?)
   127→### ky.delete(input, options?)
   129→Sets `options.method` to the method name and makes a request.
   130→
      →…
   342→###### hooks.beforeRequest
   344→Type: `Function[]`\
      →…
   373→###### hooks.beforeRetry
   375→Type: `Function[]`\
      →…
   446→###### hooks.beforeError
   448→Type: `Function[]`\
      →…
   485→###### hooks.afterResponse
   487→Type: `Function[]`\
      →…
  1050→## Tips
  1052→### Sending form data
  1054→Sending form data in Ky is identical to `fetch`. Just pass a [`FormData`](https://developer.mozilla.org/en-US/docs/Web/API/FormData) instance to the `body` option. The `Content-Type` header will be automatically set to `multipart/form-data`, overriding any existing `Content-Type` header.
  1055→
      →…
  1158→#### Native proxy support
  1160→Node.js 24.5+ supports automatic proxy configuration via environment variables. Set `NODE_USE_ENV_PROXY=1` or use the `--use-env-proxy` CLI flag.
  1161→
  1162→```sh
  1163→NODE_USE_ENV_PROXY=1 HTTP_PROXY=http://proxy.example.com:8080 node app.js
  1164→```
  1165→
  1166→Or:
  1167→
  1168→```sh
  1169→node --use-env-proxy app.js
  1170→```
  1171→
  1172→Supported environment variables:
      →…
  1292→## FAQ
  1294→#### How do I use this in Node.js?
  1296→Node.js 18 and later supports `fetch` natively, so you can just use this package directly.
  1297→
  1339→## Browser support
  1341→The latest version of Chrome, Firefox, and Safari.
      →…
  1343→## Node.js support
  1345→Node.js 18 and later.
      →…
  1347→## Related
  1349→- [fetch-extras](https://github.com/sindresorhus/fetch-extras) - Useful utilities for working with Fetch
      →…
  1352→## Maintainers
  1354→- [Sindre Sorhus](https://github.com/sindresorhus)
      →…
source/core/Ky.ts
    33→export class Ky {
    34→	static create(input: Input, options: Options): ResponsePromise {
    35→		const ky = new Ky(input, options);
    36→
   200→	constructor(input: Input, options: Options = {}) {
   201→		this.#input = input;
   202→
      →…
source/core/constants.ts
    68→export type ForceRetryOptions …
   145→/**
   146→Marker returned by ky.retry() to signal a forced retry from afterResponse hooks.
   147→*/
   148→export class RetryMarker {
   149→	constructor(public options?: ForceRetryOptions) {}
   150→}
   152→/**
   153→Force a retry from an `afterResponse` hook.
   154→
   155→This allows you to retry a request based on the response content, even if the response has a successful status code. The retry will respect the `retry.limit` option and skip the `shouldRetry` check. The forced retry is observable in `beforeRetry` hooks, where the error will be a `ForceRetryError`.
   156→
   157→@param options - Optional configuration for the retry.
   158→
   159→@example
   160→```
   161→import ky, {isForceRetryError} from 'ky';
   162→
   163→const api = ky.extend({
   164→	hooks: {
   165→		afterResponse: [
      →…
   235→export const retry = (options?: ForceRetryOptions) => new RetryMarker(options);
source/errors/ForceRetryError.ts
     8→export class ForceRetryError extends Error {
     9→	override name = 'ForceRetryError' as const;
    10→	customDelay: number | undefined;
    11→	code: string | undefined;
    12→	customRequest: Request | undefined;
    13→
    14→	constructor(options?: ForceRetryOptions) {
      →…
source/errors/HTTPError.ts
     5→export class HTTPError<T = unknown> extends Error {
     6→	public response: KyResponse<T>;
     7→	public request: KyRequest;
     8→	public options: NormalizedOptions;
     9→
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {
source/errors/NonError.ts
     6→export class NonError extends Error {
     7→	override name = 'NonError';
     8→	readonly value: unknown;
     9→
    10→	constructor(value: unknown) {
    11→		let message = 'Non-error value was thrown';
    12→
      →…
source/errors/TimeoutError.ts
     3→export class TimeoutError extends Error {
     4→	public request: KyRequest;
     5→
     6→	constructor(request: Request) {
     7→		super(`Request timed out: ${request.method} ${request.url}`);
      →…
source/index.ts
    10→const createInstance = (defaults?: Partial<Options>): KyInstance => {
    11→	// eslint-disable-next-line @typescript-eslint/promise-function-async
      →…
    34→const ky = createInstance();
source/types/ResponsePromise.ts
     4→import {type KyResponse} from './response.js';
source/types/common.ts
source/types/hooks.ts
source/types/ky.ts
source/types/options.ts
    33→export type KyOptions …
   307→export type KyOptionsRegistry …
   309→/**
   310→Options are the same as `window.fetch`, except for the KyOptions
   311→*/
   312→export interface Options extends KyOptions, Omit<RequestInit, 'headers'> { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   313→	/**
   314→	HTTP method used to make the request.
   315→
   316→	Internally, the standard methods (`GET`, `POST`, `PUT`, `PATCH`, `HEAD` and `DELETE`) are uppercased in order to avoid server errors due to case sensitivity.
   317→	*/
   318→	method?: LiteralUnion<HttpMethod, string>;
   319→
   320→	/**
   321→	HTTP headers used to make the request.
   322→
   323→	You can pass a `Headers` instance or a plain object.
   324→
   325→	You can remove a header with `.extend()` by passing the header with an `undefined` value.
   326→
   327→	@example
   328→	```
   329→	import ky from 'ky';
   330→
   331→	const url = 'https://sindresorhus.com';
   332→
   333→	const original = ky.create({
   334→		headers: {
   335→			rainbow: 'rainbow',
   336→			unicorn: 'unicorn'
   337→		}
   338→	});
   339→
   340→	const extended = original.extend({
   341→		headers: {
   342→			rainbow: undefined
   343→		}
   344→	});
   345→
   346→	const response = await extended(url).json();
   347→
   348→	console.log('rainbow' in response);
   349→	//=> false
   350→
   351→	console.log('unicorn' in response);
   352→	//=> true
   353→	```
   354→	*/
   355→	headers?: KyHeadersInit;
   356→}
   370→/**
   371→Normalized options passed to the `fetch` call and the `beforeRequest` hooks.
   372→*/
   373→export interface NormalizedOptions extends RequestInit { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   374→	// Extended from `RequestInit`, but ensured to be set (not optional).
   375→	method: NonNullable<RequestInit['method']>;
   376→	credentials?: NonNullable<RequestInit['credentials']>;
   377→
   378→	// Extended from custom `KyOptions`, but ensured to be set (not optional).
   379→	retry: RetryOptions;
   380→	prefixUrl: string;
   381→	onDownloadProgress: Options['onDownloadProgress'];
   382→	onUploadProgress: Options['onUploadProgress'];
   383→	context: Record<string, unknown>;
   384→}
source/types/request.ts
source/types/response.ts
source/types/retry.ts
source/utils/body.ts
    57→const withProgress …
source/utils/delay.ts
     5→export type DelayOptions …
source/utils/is.ts
source/utils/merge.ts
    32→function newHookValue …
    47→const appendSearchParameters …
source/utils/normalize.ts
source/utils/options.ts
source/utils/timeout.ts
     3→export type TimeoutOptions …
source/utils/type-guards.ts
     5→/**
      →…
    27→export function isKyError(error: unknown): error is HTTPError | TimeoutError | ForceRetryError {
    31→/**
      →…
    49→export function isHTTPError<T = unknown>(error: unknown): error is HTTPError<T> {
    53→/**
      →…
    71→export function isTimeoutError(error: unknown): error is TimeoutError {
    75→/**
      →…
    98→export function isForceRetryError(error: unknown): error is ForceRetryError {
source/utils/types.ts
     1→export type Mutable …
     5→export type ObjectEntries …
test/browser.ts
    13→	interface Window {
test/helpers/create-http-test-server.ts
     7→export type HttpServerOptions …
    11→export type ExtendedHttpTestServer …
